code has been refactored and some a new centralized class has been added